--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <div id="outer">
     <center><h1>Star Wars Quiz</h1><center><hr>
+      <div id="inner">
+      </div>
     <script src="src/index.js"></script>
+
+  </div>
   </body>
 </html>
