options not working

--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
   </head>
   <body>
-    <div id="outer">
-    <center><h1>Star Wars Quiz</h1><center><hr>
-      <div id="inner">
-      </div>
-    <script src="src/index.js"></script>
+    <div class="banner">
+      <center><h1>Star Wars Quiz</h1><center><hr>
+    </div>
+    <div id="background">
 
-  </div>
+      <div id="outer-question-box">
+        <div id="question-box">
+          <p> QUESTIONS GO HERE </p>
+        </div>
+        <div id="option-box">
+          OPTIONS GO HERE
+        </div>
+      </div>
+
+<button type="button" name="button">ALAN RULEZZZZZZ</button>
+
+    </div>
+  <script src="questions.js"></script>
+  <script src="index.js"></script>
   </body>
 </html>
