added css and answer buttons for each question

--- a/index.html
+++ b/index.html
@@ -3,26 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="banner">
-      <center><h1>Star Wars Quiz</h1><center><hr>
+      <center>
+        <h1 class="star-wars">Star Wars Trivia</h1>
+      <center>
     </div>
     <div id="background">
-
-      <div id="outer-question-box">
-        <div id="question-box">
-          <p> QUESTIONS GO HERE </p>
+        <div id="question-container">
+         <!-- <p> QUESTIONS GO HERE </p> -->
         </div>
-        <div id="option-box">
-          OPTIONS GO HERE
+        <div id="answer-choices-container">
+          <!-- OPTIONS GO HERE -->
         </div>
-      </div>
-
-<button type="button" name="button">ALAN RULEZZZZZZ</button>
-
     </div>
+
   <script src="questions.js"></script>
   <script src="index.js"></script>
   </body>
