basically achieved mvp but still have a few more things to do

--- a/index.html
+++ b/index.html
@@ -11,14 +11,28 @@
         <h1 class="star-wars">Star Wars Trivia</h1>
       <center>
     </div>
-    <div id="background">
+    <center><div id="background">
+      <div id="home-page">
+      <center><form id="input-initials-form" class="visible" action="index.html" method="post">
+        <input id="name-input-value" type="text" name="" placeholder="Input Initials" value="">
+        <button type="submit" name="button">Submit</button>
+      </form></center><br>
+      <p>Welcome to Star Wars Trivia!</p>
+      <p>The game that tests your Star Wars knowledge</p>
+      <p>Please enter your initials and hit submit to begin!</p></div>
+
+
+
+
+
+
         <div id="question-container">
          <!-- <p> QUESTIONS GO HERE </p> -->
         </div>
         <div id="answer-choices-container">
           <!-- OPTIONS GO HERE -->
         </div>
-    </div>
+    </div></center>
 
   <script src="questions.js"></script>
   <script src="index.js"></script>
