added x-wing fighters as lives

--- a/index.html
+++ b/index.html
@@ -11,26 +11,34 @@
         <h1 class="star-wars">Star Wars Trivia</h1>
       <center>
     </div>
+    <div style="color:#feda4a" id="score-nav" class="sidenav">
+      MOST SMARTEST STAR WARS FANS: <hr>
+    </div>
     <center><div id="background">
       <div id="home-page">
       <center><form id="input-initials-form" class="visible" action="index.html" method="post">
         <input id="name-input-value" type="text" name="" placeholder="Input Initials" value="">
         <button type="submit" name="button">Submit</button>
       </form></center><br>
+      <!-- <p>A long time ago in a galaxy far, far away...</p> -->
       <p>Welcome to Star Wars Trivia!</p>
       <p>The game that tests your Star Wars knowledge</p>
       <p>Please enter your initials and hit submit to begin!</p></div>
 
+      <div class="right1" id="xwing1">
+       <img src="assets/xwing.png" styles=height="75" width="75" alt="">
+       </div>
+       <div class="right2" id="xwing2">
+       <img src="assets/xwing.png" styles=height="75" width="75" alt="">
+     </div>
 
-
-
-
-
-        <div id="question-container">
+        <div class="questions" id="question-container">
          <!-- <p> QUESTIONS GO HERE </p> -->
         </div>
         <div id="answer-choices-container">
           <!-- OPTIONS GO HERE -->
+        </div>
+        <div id="start-over-button-container">
         </div>
     </div></center>
 
